fixed scrolling on iOS for real now

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -192,8 +192,6 @@ textarea {
 html {
   font: 112.5%/1.45em georgia, serif;
   box-sizing: border-box;
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
 }
 * {
   box-sizing: inherit;
